# near-api-cpp

./: .gitignore  CMakeLists.txt  README  api.cpp  api.h  borsh.hpp  librust_api.d  librust_api.dylib  main  main.cpp  my_header.h  script.sh  transactions.cpp
.cache/clangd/index/: bip39.cpp.C738F8D438398B85.idx  bip39.h.3E9EC04DB038619E.idx  bip39_tests.cpp.FB77E113CDAE8B45.idx  bip39_tests.h.8CA267D159B6D2C0.idx  chinese_simplified.h.FBB01E418B0CFED1.idx  chinese_simplified_str.h.6983273F531BF43B.idx  chinese_traditional.h.62C6E898AEE7F023.idx  chinese_traditional_str.h.15CE43E3312C671C.idx  english.h.F9539462BB657F74.idx  english_str.h.F6C9DEE667405747.idx  french.h.25FC1A028AF2B40A.idx  french_str.h.9BEE19D7139AE022.idx  gmock-actions.h.CF9C1B66B2EAF3BD.idx  gmock-all.cc.7EF3BE54D7AB96F9.idx  gmock-cardinalities.cc.C79D23480043623C.idx  gmock-cardinalities.h.0A1F4B7945800E18.idx  gmock-generated-actions.h.93CDBE7B0EBE3E40.idx  gmock-generated-actions.h.F26D003B6E2A37DE.idx  gmock-generated-function-mockers.h.910ADED69EA18F23.idx  gmock-generated-internal-utils.h.7B2D4B4621AEDE99.idx  gmock-generated-matchers.h.CC5ED30F645EAECD.idx  gmock-generated-nice-strict.h.2443559760F1829B.idx  gmock-internal-utils.cc.10E2C64EA6DAEB5C.idx  gmock-internal-utils.h.031BBCD0AF685988.idx  gmock-matchers.cc.B457D6B60F81FB1F.idx  gmock-matchers.h.D38741DE1D065378.idx  gmock-matchers.h.FD5741CD69A7D678.idx  gmock-more-actions.h.43B1AFC082EED23C.idx  gmock-more-matchers.h.D2E1FC79FB49CF4A.idx  gmock-port.h.B409EB7323093058.idx  gmock-port.h.D4B08934D3318098.idx  gmock-spec-builders.cc.6A9EFFA873796A5B.idx  gmock-spec-builders.h.66F667624A52C376.idx  gmock.cc.4EC03D7202ED1844.idx  gmock.h.5F8CA42FFFB390F4.idx  gmock_main.cc.0BC825373B5A3D06.idx  gtest-all.cc.FA5A3740584A9E15.idx  gtest-death-test-internal.h.4147D4EE90FA218E.idx  gtest-death-test.cc.61DE4A510BF971B8.idx  gtest-death-test.h.C9E4BA5571CFBEA4.idx  (+45 more)
bip-implement-cpp/src/crypto/: common.h
bip-implement-cpp/src/keynode/CoinClasses/: BigInt.h
bip39/: CMakeLists.txt
bip3x/: CMakeCache.txt  CPackSourceConfig.cmake  cmake_install.cmake  package_upload.sh
bip3x/bip3x/: cmake_install.cmake
bip3x/cpr/: cmake_install.cmake
bip3x/cpr/cpr/: Makefile  libcpr.1.9.0.dylib
bip3x/cpr/include/: Makefile  cmake_install.cmake
bip3x/include/bip3x/: HDKeyEncoder.h
bip3x/src/minter/: HDKeyEncoder.cpp
rust-api/: Cargo.toml
rust-api/src/: lib.rs
src/: api.cpp  api.hpp  base58.cpp  base58.hpp  base64.cpp  base64.hpp  main.cpp
